# jerry

./: .dockerignore  .env  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Dockerfile.agent  README.md  docker-compose.yml  package-lock.json  pyproject.toml  setup-adventureworks.sh  setup_gmail_auth.py
agent/: agent_service.py  mcp_server.py
client/: .gitignore  CLAUDE.md  env-example.txt  instrumentation.ts  mcp-artifact-system-documentation.md  package-lock.json  package.json  pnpm-lock.yaml
client/ai/: providers.ts
client/app/: globals.css  layout.tsx  providers.tsx
client/components/: api-key-manager.tsx  artifact-history-button.tsx  artifact-panel.tsx  chat-sidebar.tsx  chat.tsx  conversation-widgets.tsx  custom-artifact-renderer.tsx  main-layout.tsx  markdown.tsx  mcp-server-manager.tsx  message.tsx  messages.tsx  model-picker.tsx  project-overview.tsx  settings-dialog.tsx  textarea.tsx  theme-toggle.tsx  tool-invocation.tsx
client/lib/: chat-store.ts  mcp-client.ts  theme-config.ts  widget-prompts.ts
email_examples/: email1.md  email2.md  email3.md  email4.md  email5.md  email6.md
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/app/: globals.css  (+2 more)
knime-workflow/: email_classification.knwf
models/: evaluate_criticality_classifier.py  evaluate_email_classifier.py  evaluate_type_classifier.py  preprocessing.py  preprocessing_criticality.py  preprocessing_type.py  train_criticality_classifier.py  train_email_classifier.py  train_type_classifier.py  weighted_train_email_classifier.py
(+395 files in other folders)
